--- a/.flowconfig
+++ b/.flowconfig
@@ -13,5 +13,6 @@ lib/types.js
 lib/third-party-libs.js.flow
 
 [options]
+strip_root=true
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 suppress_comment= \\(.\\|\n\\)*\\$FlowIssue
